Resume rewrites and print prep

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     />
     <title>Heleen Evers | Homepage</title>
 
+    <!-- SEO -->
+    <meta property="og:title" content="Heleen Evers - Digital Designer" />
+    <meta
+      property="og:description"
+      content="Portfolio showcasing motion graphics, branding, and digital design work"
+    />
+    <meta
+      property="og:image"
+      content="/assets/img/optimized/works/branding/he-logo-glitch-border-600.webp"
+    />
+
     <!-- Adobe Fonts - Replace with kit ID -->
     <link rel="stylesheet" href="https://use.typekit.net/gce1qdi.css" />
 
