--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
       name="description"
       content="Heleen Evers - Digital Designer Portfolio"
     />
-    <title>Heleen Evers | Homepage</title>
+    <title>Heleen Evers | 404 - Page Not Found</title>
 
     <!-- Adobe Fonts - Replace with kit ID -->
     <link rel="stylesheet" href="https://use.typekit.net/gce1qdi.css" />
