Image conversion + portfolio sorting script updates + Add blog post covers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="/assets/img/optimized/works/branding/he-logo-glitch-border-600.webp"
+      content="/assets/images/favicons/favicon-sq-light.png"
     />
 
     <!-- Adobe Fonts - Replace with kit ID -->
