--- a/portfolio.html
+++ b/portfolio.html
@@ -416,8 +416,35 @@
                 </div>
               </div>
 
+              <div class="box-item f-link" data-date="2025-05-26">
+                <div class="image">
+                  <a
+                    href="https://myminimascots.netlify.app/"
+                    class="has-popup-link"
+                    target="_blank"
+                  >
+                    <img
+                      src="/assets/img/optimized/works/branding/mmm-home-thumbnail-600.webp"
+                      alt="My Mini Mascots Homepage Thumbnail"
+                    />
+                    <span class="info">
+                      <i class="ri-external-link-line"></i>
+                    </span>
+                  </a>
+                </div>
+                <div class="desc">
+                  <div class="category">Link</div>
+                  <a
+                    target="_blank"
+                    href="https://myminimascots.netlify.app/"
+                    class="name has-popup-link"
+                    >My Mini Mascots Website</a
+                  >
+                </div>
+              </div>
+
               <!-- Music Item -->
-              <div class="box-item f-music" data-date="2020-04-04">
+              <!-- <div class="box-item f-music" data-date="2020-04-04">
                 <div class="image">
                   <a
                     href="https://api.soundcloud.com/tracks/790365085"
@@ -440,7 +467,7 @@
                     >The Sound Of FAH</a
                   >
                 </div>
-              </div>
+              </div> -->
 
               <!-- Image Item -->
               <div class="box-item f-image" data-date="2023-06-13">
