--- a/resume.html
+++ b/resume.html
@@ -192,16 +192,15 @@
                   <div class="resume-item">
                     <div class="date">2020 - present</div>
                     <div class="name">
-                      Video Content Creator & Motion Designer
+                      Digital Designer for (Motion) Graphics
                     </div>
                     <p>
-                      Specialized in motion graphics for online content
-                      creators, providing animated end card graphics,
-                      interactive UI animations, and polished post-production
-                      edits. Served YouTube creators and vloggers by finalizing
-                      footage for online publishing. Offered production and
-                      direction support for social media shoots. Continuously
-                      refining skills in video post-production and animation.
+                      Focusing on motion graphics for online content creators
+                      and businesses with webshops. Providing branded content -
+                      from 1 sec logo & banner art to shortform promos using
+                      client footage. Offered production and direction support
+                      for social media shoots. Continuously refining skills,
+                      currently focusing on interactive UI.
                     </p>
                     <div class="clients list">
                       <ul>
@@ -216,6 +215,12 @@
                             (<a href="https://foilarmsandhog.ie" target="_blank"
                               >Foil Arms and Hog</a
                             >, IE)
+                          </div>
+                        </li>
+                        <li>
+                          <div class="client">
+                            Newsletter/Social Graphics, Product Photography
+                            (Pagoda, BE)
                           </div>
                         </li>
                         <li>
@@ -257,7 +262,8 @@
                         </li>
                         <li>
                           <div class="client">
-                            Behind-The-Scenes Teaser (Choralux, BE)
+                            Behind-The-Scenes Teaser for Instagram (Choralux,
+                            BE)
                           </div>
                         </li>
                       </ul>
@@ -266,13 +272,13 @@
 
                   <div class="resume-item">
                     <div class="date">2018 - present</div>
-                    <div class="name">Videographer & Editor</div>
+                    <div class="name">Video/photographer & Editor</div>
                     <p>
                       Executed small-scale solo video projects from planning and
                       shooting to editing and delivery. Produced teaser
                       trailers, aftermovies, behind-the-scenes content, and
                       full-length multicam edits including titles and captions.
-                      Specialized in video reporting for stage performances and
+                      Specialised in video reporting for stage performances and
                       client-driven storytelling.
                     </p>
                     <div class="clients list">
@@ -280,9 +286,19 @@
                         <li>
                           <div class="client">
                             <a
+                              href="https://www.onthespot-tsk.com/"
+                              target="_blank"
+                              >On The Spot</a
+                            >
+                            (Houthalen-Helchteren, BE)
+                          </div>
+                        </li>
+                        <li>
+                          <div class="client">
+                            <a
                               href="https://www.syntra.be/campus/hasselt/"
                               target="_blank"
-                              >Syntra</a
+                              >Syntra Hasselt</a
                             >
                             (Genk & Hasselt, BE)
                           </div>
@@ -364,15 +380,18 @@
                       Production Assistant for Film & Performing Arts
                     </div>
                     <p>
-                      Provided general production support on shorts and student
-                      films, including camera operation, lighting, and sound
-                      assistance. Began as a Cultural Studies intern aiding live
-                      theatre and concert productions. Occasionally contributed
-                      copywriting for print and social media promotion. All work
-                      performed on a volunteer basis.
+                      Provided general production support. Began as a Cultural
+                      Studies intern aiding live theatre productions.
+                      Occasionally contributed copywriting for print, such as
+                      concert booklets. All work performed on a volunteer basis.
                     </p>
                     <div class="clients list">
                       <ul>
+                        <li>
+                          <div class="client">
+                            Voca Lisa - Herman Engels (Leuven, BE)
+                          </div>
+                        </li>
                         <li>
                           <div class="client">
                             <a
@@ -416,7 +435,7 @@
 
                   <div class="resume-item">
                     <div class="date">2021 - present</div>
-                    <div class="name">Online Courses & Summits (various)</div>
+                    <div class="name">Online Courses (various)</div>
                     <p>
                       I continue to expand my skill set with paid and free
                       online courses. I also regularly attend various web
@@ -452,6 +471,13 @@
                               href="https://www.motionbynick.com/upgrade"
                               target="_blank"
                               >Nick Greenawalt</a
+                            >)
+                          </div>
+                          <div class="course">
+                            Motion Design Strategy & Other (<a
+                              href="https://www.manueldoesmotion.com/motion-design-strategy"
+                              target="_blank"
+                              >Manuel Steinhauser</a
                             >)
                           </div>
                           <div class="course">
@@ -720,9 +746,11 @@
                   </div>
                   <div class="context">
                     <p>
-                      Self-taught in GIMP and Photoshop, I apply compositing,
-                      masking, and retouching techniques regularly, especially
-                      to enhance backgrounds and textures for motion graphics.
+                      Self-taught in photo manipulation since 2004. I apply
+                      compositing, masking, and retouching techniques regularly,
+                      especially to enhance backgrounds and textures for motion
+                      graphics. I work with patterns, texture brushes, graphic
+                      styles and actions, which I sometimes create myself.
                       Lightroom complements my skills by enabling advanced photo
                       edits, leveraging my experience in video post-production.
                     </p>
@@ -743,6 +771,14 @@
                         width="512"
                         alt="Adobe Photoshop Lightroom CC icon"
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Adobe_Photoshop_Lightroom_CC_logo.svg/512px-Adobe_Photoshop_Lightroom_CC_logo.svg.png?20200616120137"
+                    /></a>
+                    <a
+                      title="Canva, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Canva-Logo.png"
+                      ><img
+                        width="512"
+                        alt="Canva-Logo"
+                        src="https://upload.wikimedia.org/wikipedia/commons/2/27/Canva-Logo.png?20250111163804"
                     /></a>
                   </div>
                 </li>
