Fix meta tags for index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Heleen Evers | Homepage</title>
 
-    <!-- SEO -->
+    <!-- OPEN GRAPH META TAGS -->
     <meta property="og:title" content="Heleen Evers - Digital Designer" />
     <meta
       property="og:description"
@@ -20,8 +20,11 @@
     />
     <meta
       property="og:image"
-      content="/assets/images/favicons/favicon-sq-light.png"
+      content="https://heleenevers.be/assets/images/favicons/favicon-sq-light.png"
     />
+    <meta property="og:url" content="https://heleenevers.be/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Adobe Fonts - Replace with kit ID -->
     <link rel="stylesheet" href="https://use.typekit.net/gce1qdi.css" />
