Optimise OG meta images

--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
       property="og:description"
       content="Portfolio showcasing motion graphics, branding, and digital design work"
     />
+    <!-- images -->
     <meta
       property="og:image"
-      content="https://heleenevers.be/assets/images/favicons/favicon-sq-light.png"
+      content="https://heleenevers.be/assets/images/he-monogram-sq1200.jpg"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+
+    <meta
+      property="og:image"
+      content="https://heleenevers.be/assets/images/he-homepage.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta property="og:url" content="https://heleenevers.be/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
