--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta
-      name="description"
-      content="Heleen Evers - Digital Designer Portfolio"
-    />
+
     <title>Heleen Evers | Homepage</title>
 
-    <!-- OPEN GRAPH META TAGS -->
-    <meta property="og:title" content="Heleen Evers - Digital Designer" />
+    <meta
+      name="description"
+      content="Portfolio and blog by Heleen Evers, showcasing motion graphics, branding, UI design and creative digital work."
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://heleenevers.be/" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:locale" content="en_BE" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Heleen Evers" />
+    <meta
+      property="og:title"
+      content="Heleen Evers - Digital Designer in Hasselt"
+    />
     <meta
       property="og:description"
-      content="Portfolio showcasing motion graphics, branding, and digital design work"
+      content="Portfolio and blog by Heleen Evers, showcasing motion graphics, branding, UI design, and creative digital work."
     />
+    <meta property="og:url" content="https://heleenevers.be/" />
+
     <!-- images -->
     <meta
       property="og:image"
@@ -25,6 +39,10 @@
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
+    <meta
+      property="og:image:alt"
+      content="HE monogram logo - Heleen Evers, Digital Designer"
+    />
 
     <meta
       property="og:image"
@@ -32,10 +50,25 @@
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Portfolio homepage preview - Heleen Evers, Digital Designer"
+    />
 
-    <meta property="og:url" content="https://heleenevers.be/" />
-    <meta property="og:type" content="website" />
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Heleen Evers - Digital Designer in Hasselt"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfolio and blog by Heleen Evers, digital designer and motion graphics specialist in Belgium."
+    />
+    <meta
+      name="twitter:image"
+      content="https://heleenevers.be/assets/images/he-homepage.jpg"
+    />
 
     <!-- Adobe Fonts - Replace with kit ID -->
     <link rel="stylesheet" href="https://use.typekit.net/gce1qdi.css" />
